feat(components): add Layout

--- a/src/app.css
+++ b/src/app.css
@@ -78,6 +78,11 @@
         @apply border-border;
     }
 
+    html {
+        scroll-padding-top: var(--spacing-nav);
+        scroll-behavior: smooth;
+    }
+
     body {
         @apply bg-background text-foreground font-quicksand;
     }
