feat(Navbar): add responsive behavior

--- a/src/app.css
+++ b/src/app.css
@@ -76,6 +76,7 @@
 @layer base {
     * {
         @apply border-border;
+        scrollbar-color: var(--muted-foreground) var(--background);
     }
 
     html {
